--- a/assets/css/gsdk-base.css
+++ b/assets/css/gsdk-base.css
@@ -34,6 +34,20 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
     outline : 0;
 }
 
+      /*
+      Img src
+      */
+div #img-src {
+   
+}
+
+
+
+
+
+
+
+
 /*           Font Smoothing      */
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, .btn-simple{
